# dune-diffusionFEM

./: CMakeLists.txt  Makefile.am  README.md  config.h.cmake  configure.ac  dune-diffusionfem.pc.in  dune.module
cmake/modules/: CMakeLists.txt  Makefile.am
data/: Makefile  Makefile.in  parameter  unitcube-2d.dgf
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt  Makefile.am
dune-diffusionFEM/: CMakeLists.txt  Makefile.am  config.h.cmake  configure.ac  dune-diffusionFEM.pc.in  dune.module
dune-diffusionFEM/data/: Makefile.in  parameter
dune-diffusionFEM/doc/: Makefile.am
dune-diffusionFEM/dune/: CMakeLists.txt  Makefile.am
dune-diffusionFEM/m4/: CMakeLists.txt  Makefile.am  dune-diffusionFEM.m4
dune-diffusionFEM/src/: CMakeLists.txt  FEMscheme.hh  diffusionModel.hh  diffusionPDE.hh  dirichletConstraints.hh  dune-diffusionFEM.cc  ellipticOperator.hh  nonlinearModel.hh  poissonPDE.hh  problemInterface.hh  rhs.hh
dune-diffusionPDELab/: CMakeLists.txt  Makefile.am  config.h.cmake  configure.ac  dune-diffusionPDELab.pc.in  dune.module
dune-diffusionPDELab/doc/: Makefile.am
dune-diffusionPDELab/dune/: CMakeLists.txt  Makefile.am
dune-diffusionPDELab/m4/: CMakeLists.txt  Makefile.am  dune-diffusionPDELab.m4
dune-diffusionPDELab/src/: CMakeLists.txt  Makefile.am  PDETestSuite.h  dune-diffusionPDELab.cc  instationaryDiffusion.h  l2interpolationerror.h  (+2 more)
m4/: CMakeLists.txt  Makefile.am  dune-diffusionfem.m4
src/: CMakeLists.txt  FEMscheme.hh  Makefile.am  dune-diffusionfem.cc  elementdata.hh  poissonPDE.hh  problemInterface.hh  rhs.hh
(+14 files in other folders)
